--- a/01_cods/01_cods/01_cods.csproj
+++ b/01_cods/01_cods/01_cods.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test.cs" />
+    <Compile Include="Character.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
